Fixed article preview responsiveness on mobile

--- a/kdp-frontend/src/styles/pageStyles/tribePage/TribePage.scss
+++ b/kdp-frontend/src/styles/pageStyles/tribePage/TribePage.scss
@@ -5,66 +5,85 @@
     color: $trit-white;
     margin: 0;
   }
+
   .tribes-overview {
     background-color: $trit-yellow;
     width: auto;
     height: 300px;
-    margin: 0%;
-    padding: 0%;
+    margin: 0;
+    padding: 0;
+
     .tribe-title {
       margin: 0;
-      padding: 20px;
-      padding-left: 40px;
+      padding: 20px 20px 20px 40px;
     }
+
     .profile-container {
       display: flex;
       flex-direction: row;
       justify-content: left;
       margin-left: 20px;
+
       .profile-tag {
         margin: 20px;
       }
     }
   }
+
   .content-container {
     min-height: calc(100vh - 417px);
+
     .articles-overview-title, .podcasts-overview-title {
       text-align: center;
       margin: 0;
       color: $trit-white;
       padding-top: 20px;
     }
+
     .loader-container {
       width: 100%;
       height: 100%;
       display: flex;
       justify-content: center;
     }
+
     .articles-container {
       margin-top: 30px;
       display: grid;
       justify-content: center;
-      grid-column: 1rem;
       grid-row-gap: 1rem;
       grid-template-columns: repeat(auto-fill, minmax(415px, 1fr));
+
       .article {
         margin: 10px;
         justify-self: center;
       }
     }
   }
+
   ::-webkit-scrollbar {
     width: 5px;
     height: 10px;
   }
+
   ::-webkit-scrollbar-track {
     background: #f1f1f1;
   }
+
   ::-webkit-scrollbar-thumb {
     background: $trit-gray;
     border-radius: 10px;
   }
+
   ::-webkit-scrollbar-thumb:hover {
     background: #555;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  /* for mobile screens < 1000px */
+  .content-container {
+    max-width: 100%;
+    margin: 0;
   }
 }
